--- a/ds1m-a/caiopalermo/index.html
+++ b/ds1m-a/caiopalermo/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="./css/font-face.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/return.css" />
+    <link rel="stylesheet" href="./css/banner/banner-style.css" />
     <title>Gintama</title>
   </head>
   <body>
@@ -52,6 +53,36 @@
       <a href="#" id="return">
         <i class="fas fa-arrow-up"></i>
       </a>
+      <section id="banner" class="banner">
+        <h1 class="banner-no-mobile__title">GINTAMA 銀魂</h1>
+        <div class="banner-mobile__title-container">
+          <h1 class="banner-mobile__title">GINTAMA</h1>
+          <h2 class="banner-mobile__subtitle">銀魂</h2>
+        </div>
+        <div class="banner-quote-container-shinpachi">
+          <p class="banner-quote">
+            “Lágrimas são úteis para lavar os problemas e os sentimentos
+            tristes. Mas, quando você cresce, você aprende que existem coisas
+            tão tristes que nunca poderão ser lavadas pelas lágrimas. Que
+            existem lembranças dolorosas que nunca devem ser lavadas. Então as
+            pessoas que são realmente fortes riem quando querem chorar. Elas
+            aguentam toda a dor e a tristeza enquanto riem com todo mundo.”
+          </p>
+          <p class="banner-quote__author">Shinpachi</p>
+          <a href="#quotes"
+            ><button class="banner-quote__button">CITAÇÕES</button></a
+          >
+        </div>
+        <div class="banner-quote-container-gintoki">
+          <p class="banner-quote">
+            “Se você começar a falar do passado, todos parecerão criminosos!”
+          </p>
+          <p class="banner-quote__author">Gintoki</p>
+          <button class="banner-quote__button">
+            <a href="#quotes">CITAÇÕES</a>
+          </button>
+        </div>
+      </section>
     </main>
     <footer id="copyright">
       <p class="copyright__text">
