--- a/ds1m-a/caiopalermo/index.html
+++ b/ds1m-a/caiopalermo/index.html
@@ -83,6 +83,58 @@
           </button>
         </div>
       </section>
+      <section id="about" class="about">
+        <h2 class="about__title">SOBRE</h2>
+        <div class="about__content">
+          <div class="history-and-opinion-container">
+            <h3 class="history-and-opinion__title">HISTÓRIA & OPINIÃO</h3>
+            <p class="history-and-opinion__text">
+              Gintama é a história de um faz tudo chamado Gintoki, um samurai
+              sem respeito com regras impostas pelos invasores e que está pronto
+              para pegar qualquer trabalho para sobreviver. Na minha opinião é o
+              melhor anime que eu já assisti. Contém uma história muito boa,
+              contando o passado dos personagens, fazendo-nos cativar com os
+              mesmos. Gintama é um anime que nos faz sorrir, chorar e ficarmos
+              apreensívos com a história. Resumindo: É SIMPLESMENTE INCRÍVEL.
+            </p>
+          </div>
+          <div class="categories-container">
+            <h3 class="categories__title">CATEGORIAS</h3>
+            <div class="categories">
+              <div class="category">
+                <p class="category__title">AÇÃO</p>
+                <div class="image">
+                  <img
+                    class="category__image"
+                    src="./img/action.png"
+                    alt="Comedy"
+                  />
+                </div>
+              </div>
+              <div class="category">
+                <p class="category__title">COMÉDIA</p>
+                <div class="image">
+                  <img
+                    class="category__image"
+                    src="./img/laugh.png"
+                    alt="Comedy"
+                  />
+                </div>
+              </div>
+              <div class="category">
+                <p class="category__title">DRAMA</p>
+                <div class="image">
+                  <img
+                    class="category__image"
+                    src="./img/drama.png"
+                    alt="Drama"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer id="copyright">
       <p class="copyright__text">
