section-images done

--- a/ds1m-a/caiopalermo/index.html
+++ b/ds1m-a/caiopalermo/index.html
@@ -26,6 +26,11 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/return.css" />
     <link rel="stylesheet" href="./css/banner/banner-style.css" />
+    <link rel="stylesheet" href="./css/about/banner-style.css" />
+    <link
+      rel="stylesheet"
+      href="./css/section-images/section-images-style.css"
+    />
     <title>Gintama</title>
   </head>
   <body>
@@ -133,6 +138,37 @@
               </div>
             </div>
           </div>
+        </div>
+      </section>
+      <section id="section-images" class="section-images">
+        <h2 class="images__title">IMAGENS</h2>
+        <div class="slideshow-container">
+          <div class="mySlides-images fade">
+            <img src="./img/images-gintama1.png" alt="Image Gintama 6" />
+          </div>
+          <div class="mySlides-images fade">
+            <img src="./img/images-gintama2.png" alt="Image Gintama 6" />
+          </div>
+          <div class="mySlides-images fade">
+            <img src="./img/images-gintama3.png" alt="Image Gintama 6" />
+          </div>
+          <div class="mySlides-images fade">
+            <img src="./img/images-gintama4.png" alt="Image Gintama 6" />
+          </div>
+          <div class="mySlides-images fade">
+            <img src="./img/images-gintama5.png" alt="Image Gintama 6" />
+          </div>
+          <div class="mySlides-images fade">
+            <img src="./img/images-gintama6.png" alt="Image Gintama 6" />
+          </div>
+        </div>
+        <div class="dots-images">
+          <span class="dot-images"></span>
+          <span class="dot-images"></span>
+          <span class="dot-images"></span>
+          <span class="dot-images"></span>
+          <span class="dot-images"></span>
+          <span class="dot-images"></span>
         </div>
       </section>
     </main>
