--- a/ds1m-a/caiopalermo/index.html
+++ b/ds1m-a/caiopalermo/index.html
@@ -29,11 +29,12 @@
     <link rel="stylesheet" href="./css/return.css" />
     <link rel="stylesheet" href="./css/banner/banner-style.css" />
     <link rel="stylesheet" href="./css/about/banner-style.css" />
-    <link rel="stylesheet" href="./css/characters/characters-style.css" />
     <link
       rel="stylesheet"
       href="./css/section-images/section-images-style.css"
     />
+    <link rel="stylesheet" href="./css/characters/characters-style.css" />
+    <link rel="stylesheet" href="./css/hasegawa/hasegawa-style.css" />
     <title>Gintama</title>
   </head>
   <body>
@@ -254,6 +255,53 @@
             </p>
           </li>
         </ul>
+      </section>
+      <section id="hasegawa" class="hasegawa">
+        <h2 class="hasegawa-no-mobile__title">
+          HASEGAWA TAIZOU - MEU PERSONAGEM PREFERIDO <span>&#10084;</span>
+        </h2>
+        <h2 class="hasegawa-mobile__title">
+          HASEGAWA TAIZOU <span>&#10084;</span>
+        </h2>
+        <div class="slideshow-container">
+          <div class="mySlides-hasegawa fade">
+            <img src="./img/hasegawa1.png" alt="Image Hasegawa 1" />
+          </div>
+
+          <div class="mySlides-hasegawa fade">
+            <img src="img/hasegawa2.png" alt="Image Hasegawa 2" />
+          </div>
+
+          <div class="mySlides-hasegawa fade">
+            <img src="img/hasegawa3.png" alt="Image Hasegawa 3" />
+          </div>
+
+          <div class="mySlides-hasegawa fade">
+            <img src="img/hasegawa4.png" alt="Image Hasegawa 4" />
+          </div>
+        </div>
+        <br />
+
+        <div class="dots-hasegawa">
+          <span class="dot-hasegawa"></span>
+          <span class="dot-hasegawa"></span>
+          <span class="dot-hasegawa"></span>
+          <span class="dot-hasegawa"></span>
+        </div>
+        <div class="hasegawa__about">
+          <p class="hasegawa__text">
+            Apesar de não ser um dos personagens principais, sem dúvidas , o
+            Hasegawa Taizou (ou MADAO) é considerado o meu personagem favorito.
+            Sempre que ele aparece no anime, causa um impacto forte na cena;
+            sendo de forma hilária, triste, ou até mesmo de forma heróica. Não é
+            à toa que eu utilizo o nome e a foto de perfil dele em todo o canto!
+            Inclusive, como vocês podem ver, criei até uma seção para este
+            personagem!
+          </p>
+          <p class="hasegawa__text">
+            Você é uma lenda, Hasegawa Taizou <span>&#10084;</span>
+          </p>
+        </div>
       </section>
     </main>
     <footer id="copyright">
