--- a/ds1m-a/caiopalermo/index.html
+++ b/ds1m-a/caiopalermo/index.html
@@ -35,6 +35,7 @@
     />
     <link rel="stylesheet" href="./css/characters/characters-style.css" />
     <link rel="stylesheet" href="./css/hasegawa/hasegawa-style.css" />
+    <link rel="stylesheet" href="./css/quotes/quotes-style.css" />
     <title>Gintama</title>
   </head>
   <body>
@@ -302,6 +303,62 @@
             Você é uma lenda, Hasegawa Taizou <span>&#10084;</span>
           </p>
         </div>
+      </section>
+      <section id="quotes" class="quotes">
+        <h2 class="quotes__title">CITAÇÕES</h2>
+        <ul class="quotes-container">
+          <li class="quote">
+            <p class="quote__text">
+              "O País? O Céu? Você pode tê-los. Eu estou ocupado demais
+              protegendo aquilo que está bem na minha frente. Eu não sei o que
+              vai me acontecer no futuro, mas quando alguma coisa cai aos meus
+              pés, o mínimo que posso fazer é pegá-la."
+            </p>
+            <p class="quote__author">Gintoki</p>
+          </li>
+          <li class="quote">
+            <p class="quote__text">
+              "Se você começar a falar do passado, todos parecerão criminosos!"
+            </p>
+            <p class="quote__author">Gintoki</p>
+          </li>
+          <li class="quote">
+            <p class="quote__text">
+              “Lágrimas são úteis para lavar os problemas e os sentimentos
+              tristes. Mas, quando você cresce, você aprende que existem coisas
+              tão tristes que nunca poderão ser lavadas pelas lágrimas. Que
+              existem lembranças dolorosas que nunca devem ser lavadas. Então as
+              pessoas que são realmente fortes riem quando querem chorar. Elas
+              aguentam toda a dor e a tristeza enquanto riem com todo mundo.”
+            </p>
+            <p class="quote__author">Gintoki</p>
+          </li>
+          <li class="quote">
+            <p class="quote__text">
+              "Eu não conheço esses números! Um homem só precisa conhecer o
+              número um para se dar bem nesse mundo.”
+            </p>
+            <p class="quote__author">Matsudaira</p>
+          </li>
+          <li class="quote">
+            <p class="quote__text">
+              "Todos em Edo são assim. São frios e insensíveis. É uma maneira
+              inteligente de viver a sua vida. Pessoas como você, que se
+              preocupam com outras, são idiotas. No final, os idiotas são apenas
+              usados. Mas eu gosto desses idiotas. Embora eu odeie você."
+            </p>
+            <p class="quote__author">Kagura</p>
+          </li>
+          <li class="quote">
+            <p class="quote__text">
+              "Saquê é muito bom. Você esquece todos os seus problemas, mesmo
+              que só por um momento. No entanto, terá que lembrar deles amanhã.
+              E doerá ainda mais do que no dia anterior. Não se foge de coisas
+              assim. Especialmente das coisas que mais quer esquecer."
+            </p>
+            <p class="quote__author">Gintoki</p>
+          </li>
+        </ul>
       </section>
     </main>
     <footer id="copyright">
