responsive banner done

--- a/ds1m-a/caiopalermo/index.html
+++ b/ds1m-a/caiopalermo/index.html
@@ -24,6 +24,7 @@
     <script src="./js/slide.js"></script>
     <script src="./js/show-character-text.js"></script>
     <script src="./js/social-networks.js"></script>
+    <script src="./js/side-nav.js"></script>
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/font-face.css" />
     <link rel="stylesheet" href="./css/style.css" />
@@ -38,6 +39,9 @@
     <link rel="stylesheet" href="./css/hasegawa/hasegawa-style.css" />
     <link rel="stylesheet" href="./css/quotes/quotes-style.css" />
     <link rel="stylesheet" href="./css/informations/informations-style.css" />
+    <link rel="stylesheet" href="./css/sidenav.css" />
+    <link rel="stylesheet" href="./css/responsive.css" />
+    <link rel="stylesheet" href="./css/banner/banner-responsive.css" />
     <title>Gintama</title>
   </head>
   <body>
