responsive about done

--- a/ds1m-a/caiopalermo/index.html
+++ b/ds1m-a/caiopalermo/index.html
@@ -42,6 +42,8 @@
     <link rel="stylesheet" href="./css/sidenav.css" />
     <link rel="stylesheet" href="./css/responsive.css" />
     <link rel="stylesheet" href="./css/banner/banner-responsive.css" />
+    <link rel="stylesheet" href="./css/about/about-responsive.css" />
+
     <title>Gintama</title>
   </head>
   <body>
