responsive section-images done

--- a/ds1m-a/caiopalermo/index.html
+++ b/ds1m-a/caiopalermo/index.html
@@ -43,6 +43,10 @@
     <link rel="stylesheet" href="./css/responsive.css" />
     <link rel="stylesheet" href="./css/banner/banner-responsive.css" />
     <link rel="stylesheet" href="./css/about/about-responsive.css" />
+    <link
+      rel="stylesheet"
+      href="./css/section-images/section-images-responsive.css"
+    />
 
     <title>Gintama</title>
   </head>
