responsive characters done

--- a/ds1m-a/caiopalermo/index.html
+++ b/ds1m-a/caiopalermo/index.html
@@ -47,6 +47,7 @@
       rel="stylesheet"
       href="./css/section-images/section-images-responsive.css"
     />
+    <link rel="stylesheet" href="./css/characters/characters-responsive.css" />
 
     <title>Gintama</title>
   </head>
