responsive hasegawa done

--- a/ds1m-a/caiopalermo/index.html
+++ b/ds1m-a/caiopalermo/index.html
@@ -48,6 +48,7 @@
       href="./css/section-images/section-images-responsive.css"
     />
     <link rel="stylesheet" href="./css/characters/characters-responsive.css" />
+    <link rel="stylesheet" href="./css/hasegawa/hasegawa-responsive.css" />
 
     <title>Gintama</title>
   </head>
