responsive quotes done

--- a/ds1m-a/caiopalermo/index.html
+++ b/ds1m-a/caiopalermo/index.html
@@ -49,6 +49,7 @@
     />
     <link rel="stylesheet" href="./css/characters/characters-responsive.css" />
     <link rel="stylesheet" href="./css/hasegawa/hasegawa-responsive.css" />
+    <link rel="stylesheet" href="./css/quotes/quotes-responsive.css" />
 
     <title>Gintama</title>
   </head>
