responsive informations done

--- a/ds1m-a/caiopalermo/index.html
+++ b/ds1m-a/caiopalermo/index.html
@@ -50,7 +50,10 @@
     <link rel="stylesheet" href="./css/characters/characters-responsive.css" />
     <link rel="stylesheet" href="./css/hasegawa/hasegawa-responsive.css" />
     <link rel="stylesheet" href="./css/quotes/quotes-responsive.css" />
-
+    <link
+      rel="stylesheet"
+      href="./css/informations/informations-responsive.css"
+    />
     <title>Gintama</title>
   </head>
   <body>
