sign language done

--- a/ds1m-a/caiopalermo/index.html
+++ b/ds1m-a/caiopalermo/index.html
@@ -25,6 +25,7 @@
     <script src="./js/show-character-text.js"></script>
     <script src="./js/social-networks.js"></script>
     <script src="./js/side-nav.js"></script>
+    <script src="./js/sign-language.js"></script>
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/font-face.css" />
     <link rel="stylesheet" href="./css/style.css" />
@@ -457,6 +458,12 @@
         Palermo Lemos
       </p>
     </footer>
+    <div vw class="enabled">
+      <div vw-access-button class="active"></div>
+      <div vw-plugin-wrapper>
+        <div class="vw-plugin-top-wrapper"></div>
+      </div>
+    </div>
     <script>
       showSlidesImages();
       showSlidesHasegawa();
