--- a/ds1m-a/caiopalermo/index.html
+++ b/ds1m-a/caiopalermo/index.html
@@ -21,6 +21,7 @@
       src="https://kit.fontawesome.com/c0e5486155.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
     <script src="./js/slide.js"></script>
     <script src="./js/show-character-text.js"></script>
     <script src="./js/social-networks.js"></script>
@@ -32,12 +33,15 @@
     <link rel="stylesheet" href="./css/return.css" />
     <link rel="stylesheet" href="./css/banner/banner-style.css" />
     <link rel="stylesheet" href="./css/about/banner-style.css" />
+    <link rel="stylesheet" href="./css/about/about-style.css" />
     <link
       rel="stylesheet"
       href="./css/section-images/section-images-style.css"
     />
+    <link rel="stylesheet" href="./css/slider/slider-images-style.css" />
     <link rel="stylesheet" href="./css/characters/characters-style.css" />
     <link rel="stylesheet" href="./css/hasegawa/hasegawa-style.css" />
+    <link rel="stylesheet" href="./css/slider/slider-hasegawa-style.css" />
     <link rel="stylesheet" href="./css/quotes/quotes-style.css" />
     <link rel="stylesheet" href="./css/informations/informations-style.css" />
     <link rel="stylesheet" href="./css/sidenav.css" />
