--- a/ds1t-b/projeto-hamburguer/index.html
+++ b/ds1t-b/projeto-hamburguer/index.html
@@ -36,10 +36,21 @@
     <link rel="stylesheet" href="./css/unidades.css">
     <link rel="stylesheet" href="./css/section-title.css">
     <link rel="stylesheet" href="./css/contato.css">
+    <link rel="stylesheet" href="./css/vlibras.css">
     <title>Le Pinguê</title>
 </head>
 
 <body>
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+          <div class="vw-plugin-top-wrapper"></div>
+        </div>
+      </div>
+      <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+      <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+      </script>
     <header>
         <div class="logo">
             <a href="#">
