header e estrutura completa - 20/11

--- a/ds1t-b/one-page-x/index.html
+++ b/ds1t-b/one-page-x/index.html
@@ -4,9 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Rubik:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/logo.css">
+    <link rel="stylesheet" href="css/button-assista-agora.css">
     <title>X, a marca da morte</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul class="menu">
+                <li>
+                    <a href="#home">Ínicio</a>
+                </li>
+                <li>
+                    <a href="#descrição-filme">Sobre o filme</a>
+                </li>
+                <li>
+                    <a href="#elenco">Elenco</a>
+                </li>
+                <li>
+                    <a href="#concept">Concept e Próteses</a>
+                </li>
+                <li>
+                    <a href="#sequencias">Confira as sequências</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="logo">
+            <img src="./img/logo.png" alt="">
+        </div>
+        <div class="button-assista-agora">
+            <a class="assista-agora" href="#">Assista agora</a>
+        </div>
+    </header>
+    <main>
+        <section class="home"></section>
+        <section class="descrição-filme"></section>
+        <section class="elenco"></section>
+        <section class="concept"></section>
+        <section class="sequencias"></section>
+    </main>
+    <footer></footer>
 </body>
 </html>
