animações nos botões implementadas

--- a/ds1t-b/projeto-hamburguer/index.html
+++ b/ds1t-b/projeto-hamburguer/index.html
@@ -53,7 +53,7 @@
       </script>
     <header>
         <div class="logo">
-            <a href="#">
+            <a href="https://www.lepingue.com.br/" target="_blank">
                 <img src="./img/logo.png" alt="logo da hamburgueria">
             </a>
         </div>
@@ -86,7 +86,7 @@
                 <span class="home__text">QUAL O SEU GOSTO?</span>
                 <span class="home__text__service">service - delivery - express</span>
             </div>
-            <a href="#" class="button__container">
+            <a href="#cardapio" class="button__container">
                 BATEU A FOME?
             </a>
         </section>
@@ -145,27 +145,27 @@
             <div class="container-hamburguer">
                 <div class="container__img">
                     <img src="./img/hamburguer1.png" alt="imagem de um hamburguer" class="card">
-                    <p class="container__img__text">BRIE BURGUER</p>
+                    <span class="container__img__text">BRIE BURGUER</span>
                 </div>
                 <div class="container__img">
                     <img src="./img/hamburguer2.png" alt="imagem de um hamburguer" class="card">
-                    <p class="container__img__text">COSTELA</p>
+                    <span class="container__img__text">COSTELA</span>
                 </div>
                 <div class="container__img">
                     <img src="./img/hamburguer3.png" alt="imagem de um hamburguer" class="card">
-                    <p class="container__img__text">LE PINGUÊ</p>
+                    <span class="container__img__text">LE PINGUÊ</span>
                 </div>
                 <div class="container__img">
                     <img src="./img/hamburguer4.png" alt="imagem de um hamburguer" class="card">
-                    <p class="container__img__text">DUPLO BACON</p>
+                    <span class="container__img__text">DUPLO BACON</span>
                 </div>
                 <div class="container__img">
                     <img src="./img/hamburguer5.png" alt="imagem de um hamburguer" class="card">
-                    <p class="container__img__text">TUBA</p>
+                    <span class="container__img__text">TUBA</span>
                 </div>
                 <div class="container__img">
                     <img src="./img/hamburguer6.png" alt="imagem de um hamburguer" class="card">
-                    <p class="container__img__text">CHEDDAR</p>
+                    <span class="container__img__text">CHEDDAR</span>
                 </div>
             </div>
         </section>
